--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            color: #ff0000;
+            font-size: 15px;
+        }
+    </style>
 </head>
 <body>
-    <h1></h1>
+    <h1>Hello</h1>
 </body>
 </html>
